--- a/task02_conversion_types/src/style.css
+++ b/task02_conversion_types/src/style.css
@@ -36,13 +36,13 @@ section {
   background-color: rgba(126, 141, 189, 0.774);
   border-radius: 15px;
 }
-.menu {
+.menu, .btnReload-wrapper {
     text-align: center;
     width: 100%;
     font-size: 24px;
     border-radius: 15px;
 }
-.menu__button {
+.menu__button, .btnReload {
   padding: 3px 10px;
   margin-top: 20px;
   margin-right: 15px;
