--- a/task10_Hennessy_XO/src/style/style.css
+++ b/task10_Hennessy_XO/src/style/style.css
@@ -1,6 +1,13 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.info {
+    height: 100px;
+    margin-top: 100px;
 }
 
 #game {
