--- a/task10_Hennessy_XO/src/style/style.css
+++ b/task10_Hennessy_XO/src/style/style.css
@@ -6,13 +6,26 @@ body {
 }
 
 .info {
-    height: 100px;
+    padding: 10px 20px;
     margin-top: 100px;
     font-size: 24px;
+    text-align: center;
+    color: #ffffff;
+    background-color: #6585b6;
+    border-radius: 5px;
+}
+
+.win {
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 30px;
+    font-size: 36px;
+    color: #ffffff;
+    background-color: #2156a4;
 }
 
 #game {
-    margin-top: 100px;
+    margin-top: 30px;
     width: 150px;
     height: 150px;
     background: #bc4124;
