--- a/task11_table/src/style/style.css
+++ b/task11_table/src/style/style.css
@@ -34,3 +34,9 @@ td:hover {
     background-color: #5b80e0;
     color: rgba(243, 240, 240, 0.69);
 }
+
+input {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
