--- a/task13_asia_chronicle/src/style/style.css
+++ b/task13_asia_chronicle/src/style/style.css
@@ -1,9 +1,8 @@
 
 .wrapper{
     margin-top: 30px;
-    margin-left: 50%;
-    margin-right: 50%;
-    width: 300px;
+    margin-left: 10%;
+    width: 90%;
     display: flex;
     flex-direction: column;
 }
@@ -28,10 +27,8 @@ dropdown-wrapper {
 .dropdown {
     position: relative;
     display: inline-block;
-    margin-left: 30px;
+    margin-right: 300px;
 }
-
-
 
 .dropdown-content {
     display: none;
