--- a/task13_asia_chronicle/src/style/style.css
+++ b/task13_asia_chronicle/src/style/style.css
@@ -32,7 +32,7 @@ dropdown-wrapper {
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f1f1f1;
     min-width: 160px;
     overflow: auto;
@@ -40,13 +40,30 @@ dropdown-wrapper {
     z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content div {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    position: relative;
+    border: 1px solid black;
 }
 
-.dropdown a:hover {background-color: #ddd;}
+.dropdown-category:hover {
+    background-color: #757474;
+    position: relative;
+}
+
+.sub-dropdown-menu{
+    display: block;
+    top: 0;
+    background-color: #e8c0e8;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    position: absolute;
+    z-index: 1;
+
+}
+
+
 
 .show {display: block;}
