--- a/task13_asia_chronicle/src/style/style.css
+++ b/task13_asia_chronicle/src/style/style.css
@@ -1,10 +1,6 @@
 
 .wrapper{
-    margin-top: 30px;
-    margin-left: 10%;
-    width: 90%;
-    display: flex;
-    flex-direction: column;
+    margin: 0 auto;
 }
 
 .drop-btn {
@@ -20,50 +16,55 @@
     background-color: #2980B9;
 }
 
-dropdown-wrapper {
-    display: flex;
-}
+/*.dropdown-wrapper {*/
+/*    display: flex;*/
+/*}*/
 
 .dropdown {
+    width: 500px;
     position: relative;
     display: inline-block;
     margin-right: 300px;
 }
 
-.dropdown-content {
+.dropdown-categories {
     display: none;
     position: relative;
     background-color: #f1f1f1;
     min-width: 160px;
     overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
 
-.dropdown-content div {
+.dropdown-category {
+    width: 30%;
     color: black;
-    padding: 12px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     display: block;
     position: relative;
     border: 1px solid black;
+    z-index: 1;
 }
 
 .dropdown-category:hover {
     background-color: #757474;
+    display: block;
     position: relative;
 }
 
+
 .sub-dropdown-menu{
+    width: 80%;
     display: block;
+    padding-left: 10px;
     top: 0;
-    background-color: #e8c0e8;
+    left: 190px;
+    background-color: #f1f1f1;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     position: absolute;
     z-index: 1;
-
 }
-
-
 
 .show {display: block;}
